Logo update and background elements

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="nav">
             <div class="logo-container">
-                <img src="./res/logo.png" alt=" logo " class="logo">
-                <span>ProInnovate by ProDevs</span>
+                <img src="./res/proinnovate.png" alt=" logo " class="logo">
+                <!-- <span>ProInnovate by ProDevs</span> -->
             </div>
             <div class="nav-links">
                 <a href="#">Home</a>
@@ -21,6 +21,14 @@
             </div>
         </nav>
     </header>
+
+    <div class="blue_bg">
+        <img src="./res/Rectangle 55.svg" alt="blue background" class="bg_rect">
+    </div>
+
+    <div class="rocket_bg">
+        <img src="./res/rocket.png" alt="rocket" class="bg_rocket">
+    </div>
 
     <section class="content">
         <h2>Welcome to ProInnovate by ProDevs</h2>
@@ -80,6 +88,10 @@
             <div class="dot"></div>
         </div>
     </section>
+
+    <div class="circles_bg">
+        <img src="./res/circles.png" alt="circles background" class="bg_circles">
+    </div>
     
 </body>
 </html>
