--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p>Already have an account? <a href="#" class="sign_in"> Sign In</a> </p>
 
         <div class="page_dots">
-            <div class="dot"></div>
+            <div class="dot active"></div>
             <div class="dot"></div>
             <div class="dot"></div>
         </div>
